--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
           <li class="portolio-img-item">
             <a class="link" href="">
               <img
-                src="/images/imagesbankingappInterfaceconcept.jpg"
+                src="./images/imagesbankingappInterfaceconcept.jpg"
                 alt="BankingAppInterfaceConcept"
                 width="360"
                 height="300"
